<resources>
    <string name="app_name">Dietician Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dietician Mobile</string>
    <string name="nav_header_subtitle">dieticianweb.azurewebsites.net</string>
    <string name="nav_header_desc">Plan your diet</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Profile</string>
    <string name="menu_plan">My Plan</string>
    <string name="menu_slideshow">Today Diet</string>
    <string name="menu_progress">My Progress</string>

    <string name="health_profile">Health Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="is_pregnant">Is Pregnant</string>
    <string name="is_vegetarian">Is Vegetarian</string>
    <string name="add_disease">+ Add Disease</string>
    <string name="save">Save</string>

    <string name="add_plan">Add Plan</string>
    <string name="duration">Duration</string>
    <string name="target_duration_hint">target duration</string>
    <string name="target_weight">Target Weight</string>
    <string name="target_weight_hint">target weight</string>
    <string name="plan_name_hint">Plan Name</string>

    <string name="progress_screen">This is health progress screen</string>

    <string name="home_second">Home Second</string>
    <string name="content_description_media">Today\'s Special</string>
    <string name="title">Today\'s Special</string>
    <string name="secondary_text">Garlic Bread</string>
    <string name="supporting_text">Add or remove items from the menu at any time. Use your planner to
        change your goal and preferences. Visit profile to update your personal details. Update your
        weight daily to track the progress.
    </string>
    <string name="action_1">Customize</string>
    <string name="action_2">View Plan</string>
    <string name="plan_name">Plan Name</string>
    <string name="plan_description">Start today and achieve your target in upcoming weeks.</string>
    <string name="diet_product_content">Plan A</string>
    <string name="diet_product_title">Plan A</string>
    <string name="diet_product_description">2 months plan  goaled for 70KG</string>
    <string name="username_label">Username</string>
    <string name="username_helper_text">Enter Username</string>
    <string name="username_placeholder_text">admin</string>
    <string name="password_helper_text">Enter password</string>
    <string name="login_btn_label">Login</string>
    <string name="menu_login">Login</string>

    <string name="header_text">Break First</string>
    <string name="no_plan_message">No plans yet, Please add your plan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_short">Signup</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_sign_up">SignUp</string>
    <string name="prompt_firstname">FirstName</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="action_logout">Logout</string>
    <string name="hint_activity_level">Activity Level</string>
    <string name="activity_level_1">Sedentary(little or no exercise)</string>
    <string name="activity_level_2">Slightly(light exercise or sports)</string>
    <string name="activity_level_3">Moderately(moderate exercise or sports)</string>
    <string name="activity_level_4">Very Active(hard exercise or sports)</string>
    <string name="activity_level_5">Extra Active(very hard exercise, physical job or sports)</string>
    <string name="activity_level_6">Professional Athlete</string>

    <string name="goal_hint_maintain">Maintain Weight</string>
    <string name="goal_hint_change">Change Weight</string>
    <string-array name="activity_levels">
        <item>@string/activity_level_1</item>
        <item>@string/activity_level_2</item>
        <item>@string/activity_level_3</item>
        <item>@string/activity_level_4</item>
        <item>@string/activity_level_5</item>
        <item>@string/activity_level_6</item>
    </string-array>

    <string name="pace_level_1">Normal 0.5kg per Week</string>
    <string name="pace_level_2">Strict 1kg per Week</string>
    <string name="pace_level_3">Custom Weeks</string>
    <string name="weeks_range">Duration in Weeks</string>
    <string name="hint_pace_level">Pace</string>
    <string name="weight_goal_hint">weight goal</string>
    <string name="progress_screen_hint">Enter Your Weight</string>
    <string-array name="pace_levels">
        <item>@string/pace_level_1</item>
        <item>@string/pace_level_2</item>
        <item>@string/pace_level_3</item>
    </string-array>
</resources>
