<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.dietician.mobile.ui.signup.SignUpFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.dietician.mobile.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dietician.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <!--        <action-->
        <!--            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"-->
        <!--            app:destination="@id/nav_home_second" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.dietician.mobile.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_health_profile" />

    <fragment
        android:id="@+id/nav_plan"
        android:name="com.dietician.mobile.ui.plan.PlanFragment"
        android:label="@string/menu_plan"
        tools:layout="@layout/fragment_plan" />


    <fragment
        android:id="@+id/nav_today_diet"
        android:name="com.dietician.mobile.ui.food.FoodFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.dietician.mobile.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/add_plan"
        android:name="com.dietician.mobile.ui.addPlan.AddPlanFragment"
        android:label="@string/add_plan"
        tools:layout="@layout/fragment_add_plan" />
</navigation>