<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_plan_list_24"
            android:title="@string/menu_plan"/>

        <item
            android:id="@+id/nav_today_diet"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_progress_24"
            android:title="@string/menu_progress"/>

    </group>
</menu>
